Add git exercise

--- a/3-Shell-and-Git.ipynb
+++ b/3-Shell-and-Git.ipynb
@@ -47,6 +47,7 @@
     "\n",
     "<img src=images/command_line.jpg>\n",
     "\n",
+    "\n",
     "Try these different flags:\n",
     "* ls --help\n",
     "* ls --version\n",
@@ -65,7 +66,7 @@
     "Use ls to list all of the files in your root directory. These folders have all of the programs and configuration files that make up your operating system. \n",
     "\n",
     "<img src=images/filesystem.jpg>\n",
-    "\n",
+    "*http://www.blackmoreops.com/wp-content/uploads/2015/02/Linux-file-system-hierarchy-Linux-file-structure-optimized.jpg\n",
     "\n",
     "\n",
     "To go back to your home directory type:\n",
@@ -153,7 +154,19 @@
     "Git will prompt you for a github username and password. If someone else makes changes to your github repository, you will need to update your local repository using the **pull** command.\n",
     "```\n",
     "git pull origin master\n",
-    "```"
+    "```\n",
+    "When you start a new feature in a repo, it's a good idea to work from a separate branch. This way, if you break something you can just delete the branch and switch back to the master branch. If you want to add your changes to master you can rebase your branch onto the master branch. To make a new branch, use the **branch** command.\n",
+    "```\n",
+    "git branch\n",
+    "```\n",
+    "Lists the branches you have worked on.\n",
+    "```\n",
+    "git branch bd2k-workshop-2016\n",
+    "```\n",
+    "Use the **checkout** command to switch to your new branch.\n",
+    "```\n",
+    "git checkout bd2k-workshop-2016\n",
+    "```\n"
    ]
   },
   {
