Change ssh setup for remote jupyter notebook

--- a/4-Anaconda-IPython-Dataframes.ipynb
+++ b/4-Anaconda-IPython-Dataframes.ipynb
@@ -112,13 +112,7 @@
     "\n",
     "Linux / Mac OSx\n",
     "```\n",
-    "ssh -i /path/to/ssh/key -NL 8157:localhost:8888 ubuntu@your-remote-machine-public-dns\n",
-    "```\n",
-    "\n",
-    "# FIXME -- Jacob: Add Windows method of the above command\n",
-    "Windows\n",
-    "```\n",
-    "shtuff\n",
+    "ssh -NL 8157:localhost:8888 ubuntu@your-remote-machine-public-dns\n",
     "```\n",
     "\n",
     "You should now be able to point your browser to http://localhost:8157 and see the jupyter notebook startup screen.\n",
