Add questions for evolution section

--- a/1-Introduction.ipynb
+++ b/1-Introduction.ipynb
@@ -14,6 +14,11 @@
     "\n",
     "#### Jacob Pfeil\n",
     "\n",
+    "## Group Introduction\n",
+    "* What's your name?\n",
+    "* Where are you from?\n",
+    "* What is your project for the summer?\n",
+    "\n",
     "## Workshop Goals"
    ]
   },
