--- a/5-Evolution-and-Mutations.ipynb
+++ b/5-Evolution-and-Mutations.ipynb
@@ -52,21 +52,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Use a dataframe to analyze E. coli data\n",
+    "## Use a pandas dataframe to analyze E. coli data\n",
     "\n",
     "What is the distribution of genome sizes for all the strains?\n",
+    "* What is the mean and standard deviation\n",
     "\n",
-    "Is there a relationship between genome size and Cit status?"
+    "Is there a relationship between genome size and Cit status?\n",
+    "* Look at scipy.stats for a t-test function"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
