Add OR explanation to module 4

--- a/4-Anaconda-IPython-Dataframes.ipynb
+++ b/4-Anaconda-IPython-Dataframes.ipynb
@@ -994,7 +994,8 @@
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1037,6 +1038,55 @@
    ],
    "source": [
     "titles[(titles.year < 1959) & (titles.year > 1955)].sort_values('year').head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>172508</th>\n",
+       "      <td>Miss Jerry</td>\n",
+       "      <td>1894</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120909</th>\n",
+       "      <td>Reproduction of the Corbett and Jeffries Fight</td>\n",
+       "      <td>1899</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 title  year\n",
+       "172508                                      Miss Jerry  1894\n",
+       "120909  Reproduction of the Corbett and Jeffries Fight  1899"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "titles[(titles.year < 1959) | (titles.year > 1955)].sort_values('year').head(2)"
    ]
   },
   {
