Add mutation images

--- a/1-Introduction.ipynb
+++ b/1-Introduction.ipynb
@@ -13,6 +13,7 @@
     "#### John Vivian\n",
     "\n",
     "#### Jacob Pfeil\n",
+    "I am a first year graduate student in David Haussler's lab. I work on developing bioinformatics pipelines for precision medicine initiatives. I graduated from Denison University where I studied biochemistry and math.\n",
     "\n",
     "## Group Introduction\n",
     "* What's your name?\n",
