--- a/5-Evolution-and-Mutations.ipynb
+++ b/5-Evolution-and-Mutations.ipynb
@@ -6,17 +6,32 @@
     "collapsed": true
    },
    "source": [
-    "# Evolution and Mutations"
+    "<img src=images/ucsc_banner.png width=500>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Introduction to Evolution\n",
+    "## Natural Selection\n",
     "\n",
     "<img src=images/natural_selection.png>\n",
-    "*http://evolution.berkeley.edu/evolibrary/article/evo_25"
+    "[src](http://evolution.berkeley.edu/evolibrary/article/evo_25)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mutations\n",
+    "<img src=images/point_mutation.png width=\"250\">\n",
+    "[src](http://rosalind.info/media/point_mutation.png)\n",
+    "\n",
+    "<img src=images/mutation_types.png>\n",
+    "[src](https://upload.wikimedia.org/wikipedia/commons/6/69/Point_mutations-en.png)\n",
+    "\n",
+    "<img src=images/block_mutations_med.jpeg>\n",
+    "[src](http://www.vce.bioninja.com.au/_Media/block_mutations_med.jpeg)\n"
    ]
   },
   {
@@ -55,10 +70,49 @@
     "## Use a pandas dataframe to analyze E. coli data\n",
     "\n",
     "What is the distribution of genome sizes for all the strains?\n",
-    "* What is the mean and standard deviation\n",
+    "* What is the mean and standard deviation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Is there a relationship between genome size and Cit status?\n",
     "* Look at scipy.stats for a t-test function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from scipy.stats import ttest_ind\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using these results, develop a hypothesis for how these bacteria may have obtained the ability to metabolize citrate."
    ]
   },
   {
