--- a/1-Introduction.ipynb
+++ b/1-Introduction.ipynb
@@ -13,7 +13,7 @@
     "#### John Vivian\n",
     "\n",
     "#### Jacob Pfeil\n",
-    "I am a first year graduate student in David Haussler's lab. I work on developing bioinformatics pipelines for precision medicine initiatives. I graduated from Denison University where I studied biochemistry and math.\n",
+    "I am a first year graduate student in David Haussler's lab. My research is in developing bioinformatics pipelines for precision medicine projects. I also work on a cloud computing engine called Toil. I am interested in using genomic data to personalize cancer therapy to each patient.\n",
     "\n",
     "## Group Introduction\n",
     "* What's your name?\n",
