--- a/2-SSH-and-Cloud-Computing.ipynb
+++ b/2-SSH-and-Cloud-Computing.ipynb
@@ -9,7 +9,7 @@
     "# SSH and Cloud Computing\n",
     "## SSH\n",
     "\n",
-    "SSH stands for secure shell. It allows users to connect to remote servers and issue commands. It works by encrypting data before it is transferred to the server. The remote server then follows a protocol that allows the two computers to exchange keys to decrypt the data. Here we will use an ssh client to connect to a remote server on the cloud. \n",
+    "SSH stands for secure shell. It allows users to connect to remote servers and issue commands over the internet. The remote server then follows a protocol that allows the two computers to exchange keys and decrypt the data. Here we will use an ssh client to connect to a remote server.\n",
     "\n",
     "## Windows\n",
     "Windows users can use MobaXterm to emulate a secure shell environment.\n",
@@ -23,7 +23,7 @@
     "\n",
     "# Generating an SSH Key Pair\n",
     "\n",
-    "While a simple password can be hacked, SSH keys are nearly impossible to decipher. This method creates two long character strings: a public and a private key. The public key is by default called id_rsa.pub and can be shared with the remote server. The private key is called id_rsa and should _never_ be shared with anyone. \n",
+    "While a simple password can be hacked, SSH keys are nearly impossible to crack. SSH keys consist of two long character strings: a public and a private key. The public key is by default called id_rsa.pub and can be shared with the remote server. The private key is called id_rsa and should _never_ be shared with anyone. \n",
     "\n",
     "```\n",
     "ssh-keygen -t rsa\n",
@@ -31,7 +31,7 @@
     "Enter file in which to save the key (/home/demo/.ssh/id_rsa):\n",
     "```\n",
     "\n",
-    "> It's your choice whether you want to add a password. If you add a password, you have to type it in every time you use the key.\n",
+    "> It's your choice whether you want to add a password. If you add a password, you will type it in every time you use the key.\n",
     "\n",
     "```\n",
     "Enter passphrase (empty for no passphrase): \n",
@@ -75,13 +75,13 @@
    "source": [
     "# Cloud Computing\n",
     "\n",
-    "Basically, cloud computing is when you rent a server from a company like Amazon, Microsoft or Google. This has become more popular because companies do not have to purchase and maintain their own equioment or pay salaries for IT personel while still getting the best performance and security. Another great feature is you can scale your application based on demand.\n",
+    "Basically, cloud computing is when you rent a server from a company like Amazon, Microsoft or Google. This has become more popular because companies do not have to purchase and maintain their own equioment or pay salaries for IT personel while still getting the best performance and security. Another great feature is you can scale your application based on demand. \n",
     "\n",
     "<img src=images/azure_logo.png>\n",
     "\n",
     "## Connecting to a Remote System\n",
     "\n",
-    "We are going to provide an ip address to each student for an Azure cloud instance. We are going to use ssh to connect to the server. First, we have to send our ssh public key to the remote server. \n",
+    "When you rent a server from a compnay, you are actually starting an instance of a virtual machine. We have started an instance of an Ubuntu 14.04 virtual machine for each student in the workshop. Your username on the server is bd2k and the IP address will look something like this 78.125.0.209. You will need this information to find your instance using SSH. We are using Microsoft's cloud service called Azure. First, we have to send our ssh public key to the remote server. \n",
     "\n",
     "```\n",
     "ssh-copy-id bd2k@123.45.56.78\n",
@@ -95,12 +95,44 @@
     "and check to make sure that only the key(s) you wanted were added.\n",
     "```\n",
     "\n",
-    "> Note this is not a real IP address\n",
+    "> Replace the IP address with your server address\n",
     "\n",
     "Now that the server has your public ssh key, it does not need to ask for the server password. Usually, you would send your public key before you make your instance but for this workshop we did things differently. You may still need to enter your ssh password because you encrypted your ssh key.\n",
     "\n",
+    "## You should see something like this\n",
     "<img src=images/ubuntu_welcome.png>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bonus material\n",
+    "\n",
+    "Now that we have connected we can move on to the Unix shell lesson. There are however a few commands that tell you a little about the machine you have connected to:\n",
+    "\n",
+    "    whoami - shows your username on computer you have connected to:\n",
+    "\n",
+    "dcuser@ip-172-31-62-209 ~ $ whoami\n",
+    "dcuser\n",
+    "\n",
+    "    df -h - shows space on hard drive*\n",
+    "\n",
+    "dcuser@ip-172-31-62-209 ~ $ df -h\n",
+    "\n",
+    "* Under the column 'Mounted on' row that has '/' as the value shows the value for the main disk. \n",
+    "\n",
+    "https://jasonjwilliamsny.github.io/cloud-genomics/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
