--- a/3-Shell-and-Git.ipynb
+++ b/3-Shell-and-Git.ipynb
@@ -4,17 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=images/ucsc_banner.png>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Command Line and Git\n",
+    "<img src=images/ucsc_banner.png width=\"500\">\n",
     "\n",
-    "<img src=images/gvng.jpg height=\"75%\">\n",
-    "*http://www.datacarpentry.org/shell-genomics/lessons/01_the_filesystem.html"
+    "# Command Line and Git"
    ]
   },
   {
@@ -25,7 +17,12 @@
    "source": [
     "## Command line interface\n",
     "\n",
-    "The command line is the shell interface. The shell is a basic but powerful way to interact with your computer's operating system. Running commands in a shell can be more difficult at first, but once you become more familiar with the basic commands you will find that you have much more freedom in the way you solve computing tasks. Also, most cutting-edge research tools are first developed for shell interfaces. The shell is where you input commands on the command line. There are many shells you can use. The most popular shell is called bash, but other popular shells include zsh, csh, and tcsh. We are going to use bash here. How you start a shell session depends on your operating system. Basically, macs and linux computers have a terminal program by default, but windows users will need to download a client.\n",
+    "The command line interface (CLI) is a powerful way to interact with your computer's operating system. In contrast a graphical user interface (GUI) may be more convenient to use, but you have less control in how you use the software. Also, most cutting-edge research tools are first developed for command line interfaces. \n",
+    "\n",
+    "<img src=images/gvng.jpg height=\"75%\">\n",
+    "*http://www.datacarpentry.org/shell-genomics/lessons/01_the_filesystem.html\n",
+    "\n",
+    "The shell takes commands from the command line and converts them into instructions for your computer to execute. There are many shells out there. The most popular shell is called bash, but other popular shells include zsh, csh, and tcsh. We are going to use bash here, but I recommend trying out zsh. The shell is started in a terminal emulator and how you start your terminal session depends on your operating system. Macs and linux machines usually have a terminal program pre-installed, but windows users will need to download a terminal emulator.\n",
     "\n",
     "### Mac\n",
     "Applications -> Utilities -> Terminal\n",
@@ -65,6 +62,8 @@
     "```\n",
     "Use ls to list all of the files in your root directory. These folders have all of the programs and configuration files that make up your operating system. \n",
     "\n",
+    "### Pick a program in /bin and look at it's manual page\n",
+    "\n",
     "<img src=images/filesystem.jpg>\n",
     "*http://www.blackmoreops.com/wp-content/uploads/2015/02/Linux-file-system-hierarchy-Linux-file-structure-optimized.jpg\n",
     "\n",
@@ -90,9 +89,9 @@
     "\n",
     "1. Count the number of lines in data/titles.csv (look at **wc**)\n",
     "\n",
-    "2. Use the find command to locate a file called cpuinfo and report the number of cpus on the machine.  \n",
+    "2. Use the **find** command to locate a file called cpuinfo and report the number of cpus on the machine.  \n",
     "\n",
-    "3. Pipe several commands together to remove the dates in the file data/titles.csv in and sort the titles in alphabetical order. Do not modify data/titles.csv (use **cat**, **sed** or **awk** and **sort**)\n",
+    "3. Pipe several commands together to sort the titles in data/titles.csv. Try to remove the comma and the date at the end of the line without modifying the file (use **cat**, **sed** or **awk** and **sort**)\n",
     "\n"
    ]
   },
@@ -104,7 +103,7 @@
    "source": [
     "## Git\n",
     "\n",
-    "Often when you are writing code, especially when you collaborate with other programmers, you want to keep a working copy of the code base that you can revert to when you inevitably break something. A great way to merge code from several collaborators and to fix broken code while also developing new features is to use a version control system called **git**.\n",
+    "A great way to merge code from several collaborators and to fix broken code while also developing new features is to use a version control system called **git**. Git keeps a history of code changes in a source repository that you can share with other programmers.\n",
     "\n",
     "<img src=images/git_fig.svg height=\"75%\" width=\"75%\">\n",
     "*https://www.atlassian.com/git/tutorials/why-git/git-for-developers\n",
@@ -124,7 +123,7 @@
     "\n",
     "Go to [github](https://github.com/) and click the sign up button. This is a great place to save your code in case your laptop breaks or gets stolen. It's also a great place to collaborate on projects and to share your code with others. Git and github have special vocabulary you will need to learn to get the most out of this software. For instance, you store your code in what is called a github repository or repo.\n",
     "\n",
-    "Once you have your github account set up, go to the [workshop repository](https://github.com/jvivian/BD2K-Summer-Workshop). Here is all of the code we prepared for the workshop. To make your own working copy of the repository, **fork** it by clicking the fork button. Now you own a copy of the repo you can download and make changes to. To download your workshop repo go to the terminal session that is connected to the remote server and type using your own github repo:\n",
+    "Once you have your github account set up, go to the [workshop repository](https://github.com/jvivian/BD2K-Summer-Workshop). Here is all of the code we prepared for the workshop. To make your own working copy of the repository, **fork** it by clicking the fork button. Now you own a copy of the repo you can download and make changes to. To download your workshop repo go to the terminal session that is connected to the remote server and type in this command:\n",
     "```\n",
     "git clone https://url/to/your/repo\n",
     "```\n",
@@ -132,8 +131,6 @@
     "```\n",
     "git status\n",
     "```\n",
-    "It should say the directory is clean.\n",
-    "\n",
     "Now let's make a change to the repo. We will add a file that lists the contributors to the repo.\n",
     "```\n",
     "echo John Smith > contributors.txt \n",
@@ -147,7 +144,7 @@
     "```\n",
     "git commit -m 'Add a contributors file'\n",
     "```\n",
-    "Here is a great resource for writing informative [commit messages](http://chris.beams.io/posts/git-commit/). Now that you have committed changes to your local repository, let's copy these changes to your github repository. To do this, we **push** changes to the remote repository. The remote repository is the origin for the code and master is the branch.\n",
+    "Now that you have committed changes to your local repository, let's copy these changes to your github repository. To do this, we **push** changes to the remote repository. The remote repository is called the **origin** and **master** is the branch.\n",
     "```\n",
     "git push origin master\n",
     "```\n",
@@ -155,18 +152,22 @@
     "```\n",
     "git pull origin master\n",
     "```\n",
-    "When you start a new feature in a repo, it's a good idea to work from a separate branch. This way, if you break something you can just delete the branch and switch back to the master branch. If you want to add your changes to master you can rebase your branch onto the master branch. To make a new branch, use the **branch** command.\n",
+    "When you start working on a new feature in a git repo, it's a good idea to work from a separate branch. This way, if you break something you can just delete the branch and switch back to the master branch. If you want to add your changes to master you can **rebase** your branch onto the master branch. To make a new branch, use the **branch** command.\n",
     "```\n",
     "git branch\n",
-    "```\n",
-    "Lists the branches you have worked on.\n",
+    "``` \n",
     "```\n",
     "git branch bd2k-workshop-2016\n",
     "```\n",
     "Use the **checkout** command to switch to your new branch.\n",
     "```\n",
     "git checkout bd2k-workshop-2016\n",
-    "```\n"
+    "```\n",
+    "\n",
+    "## Pro practice\n",
+    "\n",
+    "* Commit a new change to your branch and do an interactive rebase onto the master branch\n",
+    "* Check out this article about writing informative [commit messages](http://chris.beams.io/posts/git-commit/). "
    ]
   },
   {
