Update introduction, add banner.

--- a/1-Introduction.ipynb
+++ b/1-Introduction.ipynb
@@ -11,6 +11,7 @@
     "\n",
     "## Bio\n",
     "#### John Vivian\n",
+    "I am a second year graduate student working at the Genomics Institute. My main work is writing and maintaining bioinformatic pipelines for our production team. My research interests include statistical inference, modeling, and machine learning.\n",
     "\n",
     "#### Jacob Pfeil\n",
     "I am a first year graduate student in David Haussler's lab. My research is in developing bioinformatics pipelines for precision medicine projects. I also work on a cloud computing engine called Toil. I am interested in using genomic data to personalize cancer therapy to each patient.\n",
