Actually add banner

--- a/1-Introduction.ipynb
+++ b/1-Introduction.ipynb
@@ -4,14 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Carpentry Genomics Workshop\n",
+    "\n",
+    "<img src=images/ucsc_banner.png width=500>\n",
+    "# BD2K Summer Workshop\n",
     "## UC Santa Cruz Computational Genomics Lab\n",
     "\n",
     "Background on BD2K, UCSC Genomics Institute, and Bioinformatics\n",
     "\n",
     "## Bio\n",
     "#### John Vivian\n",
-    "I am a second year graduate student working at the Genomics Institute. My main work is writing and maintaining bioinformatic pipelines for our production team. My research interests include statistical inference, modeling, and machine learning.\n",
+    "I am a second year graduate student working at the Genomics Institute. My primary work is writing and maintaining bioinformatic pipelines for our production team. My research interests include statistical inference, modeling, and machine learning.\n",
     "\n",
     "#### Jacob Pfeil\n",
     "I am a first year graduate student in David Haussler's lab. My research is in developing bioinformatics pipelines for precision medicine projects. I also work on a cloud computing engine called Toil. I am interested in using genomic data to personalize cancer therapy to each patient.\n",
