Fix banner size

--- a/2-SSH-and-Cloud-Computing.ipynb
+++ b/2-SSH-and-Cloud-Computing.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=images/ucsc_banner.png>\n",
+    "<img src=images/ucsc_banner.png width=500>\n",
     "\n",
     "# SSH and Cloud Computing\n",
     "## SSH\n",
