banner, minor grammar change

--- a/4-Anaconda-IPython-Dataframes.ipynb
+++ b/4-Anaconda-IPython-Dataframes.ipynb
@@ -6,6 +6,7 @@
     "collapsed": true
    },
    "source": [
+    "<img src=images/ucsc_banner.png width=500>\n",
     "# Anaconda, IPython, and Dataframes\n",
     "\n",
     "This module covers tools which combine to form an interactive and explorative environment for data science."
