--- a/6-Visualization.ipynb
+++ b/6-Visualization.ipynb
@@ -7,7 +7,7 @@
     "<img src=images/ucsc_banner.png width=500>\n",
     "# Visualization\n",
     "\n",
-    "Visualization is one of the best parts of data science. Visualizing data isn't just for aesthetics, it can profoundly change the way a person understands the data they're working with that is much harder to achieve by just working with numbers."
+    "Visualization is one of the best parts of data science. Visualizing data isn't just for aesthetics, it can profoundly change the way a person understands the data they're working with, in a way that is much harder to achieve by just working with numbers."
    ]
   },
   {
