Fix git figure again

--- a/3-Shell-and-Git.ipynb
+++ b/3-Shell-and-Git.ipynb
@@ -105,7 +105,7 @@
     "\n",
     "A great way to merge code from several collaborators and to fix broken code while also developing new features is to use a version control system called **git**. Git keeps a history of code changes in a source repository that you can share with other programmers.\n",
     "\n",
-    "<img src=images/git_fig.svg height=\"75%\" width=\"75%\">\n",
+    "<img src=images/git_fig.png width=\"500\">\n",
     "*https://www.atlassian.com/git/tutorials/why-git/git-for-developers\n",
     "\n",
     "## Install git\n",
