Add more images to evolution section

--- a/5-Evolution-and-Mutations.ipynb
+++ b/5-Evolution-and-Mutations.ipynb
@@ -23,7 +23,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## DNA\n",
+    "<img src=images/cell_dna.png>\n",
+    "*https://upload.wikimedia.org/wikipedia/commons/thumb/e/e2/Eukaryote_DNA-en.svg/2000px-Eukaryote_DNA-en.svg.png\n",
+    " \n",
+    "## Gene Structure\n",
+    "<img src=images/orf_start_stop.jpg>\n",
+    "*http://images.slideplayer.com/19/5750865/slides/slide_22.jpg\n",
+    "\n",
+    "<img src=images/centraldogma.jpg>\n",
+    "*http://www.lhsc.on.ca/_images/Genetics/centraldogma.jpg\n",
+    "\n",
+    "\n",
     "## Mutations\n",
+    "\n",
     "<img src=images/point_mutation.png width=\"250\">\n",
     "[src](http://rosalind.info/media/point_mutation.png)\n",
     "\n",
@@ -32,6 +45,30 @@
     "\n",
     "<img src=images/block_mutations_med.jpeg>\n",
     "[src](http://www.vce.bioninja.com.au/_Media/block_mutations_med.jpeg)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GENE: MRFHLY*\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Mutation exercise\n",
+    "from random import sample\n",
+    "interesting_aas = {'P', 'F', 'E', 'I', 'L', 'H', 'D', 'W', 'Y', 'R'}\n",
+    "bag = {key: aa for key, aa in zip(sample(range(1, 11), 10), interesting_aas)}\n",
+    "guesses = [1, 2, 3, 4, 5,]\n",
+    "print 'GENE: M{}*'.format(''.join(bag[g] for g in guesses))"
    ]
   },
   {
@@ -69,22 +106,20 @@
    "source": [
     "## Use a pandas dataframe to analyze E. coli data\n",
     "\n",
-    "What is the distribution of genome sizes for all the strains?\n",
-    "* What is the mean and standard deviation"
+    "1. What is the mean and standard deviation for genome size in Cit+ bacteria. \n",
+    "2. What is the mean and standard deviation for genome sizes in Cit- or Cit unknown bacteria?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "\n"
+    "from numpy import mean, std\n"
    ]
   },
   {
@@ -92,7 +127,7 @@
    "metadata": {},
    "source": [
     "Is there a relationship between genome size and Cit status?\n",
-    "* Look at scipy.stats for a t-test function"
+    "* Are Cit+ and Cit- genome sizes statistically different? "
    ]
   },
   {
