Add genetic code image

--- a/5-Evolution-and-Mutations.ipynb
+++ b/5-Evolution-and-Mutations.ipynb
@@ -44,12 +44,15 @@
     "[src](https://upload.wikimedia.org/wikipedia/commons/6/69/Point_mutations-en.png)\n",
     "\n",
     "<img src=images/block_mutations_med.jpeg>\n",
-    "[src](http://www.vce.bioninja.com.au/_Media/block_mutations_med.jpeg)\n"
+    "[src](http://www.vce.bioninja.com.au/_Media/block_mutations_med.jpeg)\n",
+    "\n",
+    "<img src=images/genetic_code.jpeg>\n",
+    "[src](http://www.vce.bioninja.com.au/_Media/genetic_code_med.jpeg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -58,7 +61,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GENE: MRFHLY*\n"
+      "Protein: MRFDPI*\n"
      ]
     }
    ],
@@ -68,7 +71,7 @@
     "interesting_aas = {'P', 'F', 'E', 'I', 'L', 'H', 'D', 'W', 'Y', 'R'}\n",
     "bag = {key: aa for key, aa in zip(sample(range(1, 11), 10), interesting_aas)}\n",
     "guesses = [1, 2, 3, 4, 5,]\n",
-    "print 'GENE: M{}*'.format(''.join(bag[g] for g in guesses))"
+    "print 'Protein: M{}*'.format(''.join(bag[g] for g in guesses))"
    ]
   },
   {
